--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,10 +29,11 @@ chrono = { version = "0.4", features = ["serde"] }
 once_cell = "1.21.3"
 num-format = "0.4.4"
 dashmap = "6.1.0"
-async-trait = "0.1"
+async-trait = "0.1.89"
 commands = "0.0.5"
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
+moka = { version = "0.12.10", features = ["sync"] }
 
 [[bin]]
 name = "bot-dev"
